test/spec_vectors/func/fail/module_40.wat
(module (func $type-return-last-void-vs-nums (result i32 i64) (return (nop))))